[package]
name = "news_rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

authors = ["Ant"]
description = ""

[package.metadata.bundle]
name = "news_rust"
identifier = "com.doe.exampleapplication"
#icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
#resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "A simple news app."
long_description = """
Lorem ipsum
"""
#deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
#osx_frameworks = ["SDL2"]

[dependencies]
#newsapi = {path = "./newsapi"} # News retrieval
newsapi = {path = "./newsapi", features = ["async"] } # News retrieval
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

dotenv = "0.15.0" # Loads environment variables
termimad = "0.20.6" #GUI
crossterm = "0.25.0"
tokio = { version = "1.23.0", features = ["full"] } # Allows main() to be async
